[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/entities/bullet/BulletPuppet.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/battle/bullets/mage_bullet.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 7 )

[node name="BulletPuppet" type="Area2D"]
collision_layer = 4
collision_mask = 2147483648
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
