[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/entities/bullet/BulletPuppet.gd" type="Script" id=1]
[ext_resource path="res://src/effects/Trail2D.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/platformer/omzNL.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/platformer/bullet.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.5
height = 13.0

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.134078, 0.463687, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0.231373, 0.0901961, 0.145098, 0.643137, 0.211765, 0.0823529, 0.133333, 0.776471, 0.705882, 0.12549, 0.164706, 0.937255 )

[node name="Bullet" type="Area2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="Light2D" type="Light2D" parent="Sprite"]
show_behind_parent = true
texture = ExtResource( 3 )
texture_scale = 0.23
color = Color( 0.705882, 0.12549, 0.164706, 1 )
energy = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Trail2D" type="Line2D" parent="."]
show_behind_parent = true
width = 3.0
default_color = Color( 0.231373, 0.0901961, 0.145098, 1 )
gradient = SubResource( 2 )
script = ExtResource( 2 )
length = 12
active = true

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
